добавлена практика 3 в папке 3

--- a/3/index.html
+++ b/3/index.html
@@ -7,13 +7,14 @@
 </head>
 <body>
     <script>
-        const a = prompt("введите а");
-        if (a % 2 == 0) {
-            console.log(`Число ${a} четное`)
-        } else {
-            console.log(`Число ${a} нечетное`)
-        }
-        console.log(` привет ${a}! `); 
+        let apples = 3
+        let oranges = 4
+        let fruitName = "banana"
+        alert(`сумма яблок и апельсинов равна ${apples + oranges}`)
+        alert(`разность яблок и апельсинов равна ${oranges - apples}`)
+        alert(`совокупность яблок и апельсинов равна ${apples * oranges}`)
+        alert(`частность яблок и апельсинов равна ${apples / oranges}`)
+        alert(`при попытке сложения строки и числа получается ${fruitName + oranges}`)
     </script>
 </body>
 </html>
