add string by int division in practice 3

--- a/3/index.html
+++ b/3/index.html
@@ -15,6 +15,7 @@
         alert(`совокупность яблок и апельсинов равна ${apples * oranges}`)
         alert(`частность яблок и апельсинов равна ${apples / oranges}`)
         alert(`при попытке сложения строки и числа получается ${fruitName + oranges}`)
+        alert(`при попытке деления строки и числа получается ${fruitName / apples}`)
     </script>
 </body>
 </html>
