change alert op to console.log

--- a/3/index.html
+++ b/3/index.html
@@ -10,12 +10,12 @@
         let apples = 3
         let oranges = 4
         let fruitName = "banana"
-        alert(`сумма яблок и апельсинов равна ${apples + oranges}`)
-        alert(`разность яблок и апельсинов равна ${oranges - apples}`)
-        alert(`совокупность яблок и апельсинов равна ${apples * oranges}`)
-        alert(`частность яблок и апельсинов равна ${apples / oranges}`)
-        alert(`при попытке сложения строки и числа получается ${fruitName + oranges}`)
-        alert(`при попытке деления строки и числа получается ${fruitName / apples}`)
+        console.log(`сумма яблок и апельсинов равна ${apples + oranges}`)
+        console.log(`разность яблок и апельсинов равна ${oranges - apples}`)
+        console.log(`совокупность яблок и апельсинов равна ${apples * oranges}`)
+        console.log(`частность яблок и апельсинов равна ${apples / oranges}`)
+        console.log(`при попытке сложения строки и числа получается ${fruitName + oranges}`)
+        console.log(`при попытке деления строки и числа получается ${fruitName / apples}`)
     </script>
 </body>
 </html>
