--- a/6/1.html
+++ b/6/1.html
@@ -7,9 +7,11 @@
 </head>
 <body>
     <script>
-        const user = {
-
+        const names = ["Илон", "Павел", "Джефф", "Евгений", "Билл"];
+        for(i=1; i<=3; i++){
+            names.push(prompt("введите имя"))
         }
+        alert(names)
 
     </script>
 </body>
