--- a/7/1.html
+++ b/7/1.html
@@ -1,19 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
     <script>
-        const user = {
-            name: "Nikolai",
-            age: 25,
-            
-        }
+        const arr = [1, 2, 3, 4, 5, 6];
 
+        function pam(arr, callback) {
+            let newArr = [];
+            for (let i = 0; i < arr.length; i++) {
+                newArr[i] = callback(arr[i])
+            }
+            return(newArr)
+        }
+        console.log(pam(arr, (x) => x + 1));
+        
     </script>
 </body>
-</html>
 
+</html>
